# Elydora-Open-Source

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json
sdks/python/: README.md  pyproject.toml
sdks/python/elydora/: __init__.py  _async_http.py  _cli_secrets.py  _retry.py  _runtime_paths.py  _sync_http.py  _version.py  async_client.py  cli.py  client.py  integration_types.py  types.py
sdks/python/elydora/plugins/: _dotenv.py  _file_io.py  _jsonc.py  _managed_files.py  _strict_json.py  _transaction.py  augment.py  augment_io.py  (+66 more)
sdks/python/tests/: augment_support.py  claudecode_support.py  cline_support.py  codex_support.py  copilot_support.py  cursor_support.py  droid_support.py  gemini_support.py  grok_support.py  kimi_support.py  letta_support.py  qwen_support.py  test_agent_registration_contract.py  test_augment_matcher_validation.py  test_augment_official.py  test_augment_plugin.py  test_augment_runtime.py  test_augment_transaction.py  test_claudecode_official.py  test_claudecode_plugin.py  test_claudecode_runtime.py  test_claudecode_transaction.py  test_cli_security.py  test_cline_official.py  test_cline_plugin.py  test_cline_transaction.py  test_codex_plugin.py  test_codex_runtime.py  test_codex_transaction.py  test_copilot_official.py  test_copilot_plugin.py  test_copilot_transaction.py  test_cursor_plugin.py  test_cursor_runtime.py  test_cursor_security.py  test_droid_plugin.py  test_droid_policy.py  test_droid_transaction.py  test_gemini_official.py  test_gemini_plugin.py  (+25 more)
(+355 files in other folders)
