[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elydora"
dynamic = ["version"]
description = "Python SDK for the Elydora tamper-evident audit platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.33.0",
    "aiohttp>=3.14.1",
    "urllib3>=2.7.0",
    "cryptography>=48.0.1",
    "tomlkit>=0.15.1,<1.0.0",
    "typing_extensions>=4.0.0;python_version<'3.11'",
]

[project.scripts]
elydora = "elydora.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["elydora*"]

[tool.setuptools.package-data]
elydora = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "elydora._version.__version__"}
